# taconite

./: .gitignore  README.md  stack.yaml  taconite.cabal  use-haskell.cabal
app/: Main.hs
authService/: README.md  taconite.cabal
authService/src/: Client.hs  Lib.hs
client/: taconite.cabal
client/app/: Main.hs
client/src/: Lib.hs
databaseService/src/: Lib.hs
src/: Lib.hs
