name:                taconite
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/taconite#readme
license:             BSD3
license-file:        LICENSE
author:              Conor O'Flanagan
maintainer:          oflanac52@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , wai
                     , attoparsec
                     , either-unwrap
                     , mtl
                     , http-client
                     , random
                     , binary
                     , bytestring
                     , monad-control
                     , lifted-base
                     , time
                     , warp

  default-language:    Haskell2010

executable taconite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , taconite
  default-language:    Haskell2010

test-suite taconite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , taconite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Cono52/taconite
